Enabling "Show Folder Size" on a Maildir profile containing a local virtual folder may render Thunderbird unusable
Categories
(MailNews Core :: General, defect)
Tracking
(thunderbird_esr115 wontfix, thunderbird_esr128+ fixed, thunderbird132 wontfix, thunderbird133 verified)
People
(Reporter: welpy-cw, Assigned: welpy-cw)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
48 bytes,
text/x-phabricator-request
|
corey
:
approval-comm-esr128+
|
Details | Review |
Steps to reproduce:
- On a Maildir profile, create a virtual folder under "Local Folders".
- Enable "Show Folder Size" in the folder pane.
- Restart Thunderbird.
Actual results:
After step 2, console shows
Uncaught NS_ERROR_FILE_NOT_FOUND: Component returned failure code: 0x80520012 (NS_ERROR_FILE_NOT_FOUND) [nsIMsgFolder.sizeOnDisk]
updateSizeCount chrome://messenger/content/folder-tree-row.mjs:349
toggleFolderSizes chrome://messenger/content/about3Pane.js:3931
toggleFolderSize chrome://messenger/content/about3Pane.js:3919
oncommand about:3pane:1
folder-tree-row.mjs:349
After step 3, only a blank window is displayed, console shows
Uncaught (in promise) NS_ERROR_FILE_NOT_FOUND: Component returned failure code: 0x80520012 (NS_ERROR_FILE_NOT_FOUND) [nsIMsgFolder.sizeOnDisk]
setFolder chrome://messenger/content/folder-tree-row.mjs:285
_createFolderRow chrome://messenger/content/about3Pane.js:2190
_addSubFolders chrome://messenger/content/about3Pane.js:2384
initServer chrome://messenger/content/about3Pane.js:995
_initMode chrome://messenger/content/about3Pane.js:2161
_toggleMode chrome://messenger/content/about3Pane.js:2109
set activeModes chrome://messenger/content/about3Pane.js:2012
init chrome://messenger/content/about3Pane.js:1647
Uncaught TypeError: can't access property "dispatchEvent", threadTree is undefined
init chrome://messenger/content/about3Pane.js:229
expand chrome://messenger/content/pane-splitter.js:294
set isCollapsed chrome://messenger/content/pane-splitter.js:314
restoreState chrome://messenger/content/about3Pane.js:6152
restoreTab chrome://messenger/content/mailTabs.js:261
about3Pane.js:229:7
Uncaught (in promise) TypeError: can't access property "contentWindow", win.messageBrowser is undefined
openTab chrome://messenger/content/mailTabs.js:102
mailTabs.js:102:13
Only manually editing xulstore.json
and setting the visibility of folderPaneFolderSize
to false
makes Thunderbird usable again.
Assignee | ||
Comment 1•4 months ago
|
||
Updated•4 months ago
|
Assignee | ||
Updated•4 months ago
|
Assignee | ||
Updated•4 months ago
|
Pushed by alessandro@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/fec345999a3d
Fix GetSizeOnDisk for local virtual folders using Maildir storage. r=mkmelin
Comment 3•3 months ago
|
||
Confirming this issue as verified fixed with 133.0b3(20241107210012) using Windows 11, macOS 14, and Ubuntu 22 using the STR from the Description.
Assignee | ||
Comment 5•3 months ago
|
||
Comment on attachment 9432515 [details]
Bug 1926279 - Fix GetSizeOnDisk for local virtual folders using Maildir storage. r=mkmelin
[Approval Request Comment]
Testing completed (on c-c, etc.): c-c and beta
Risk to taking this patch (and alternatives if risky): very low
Updated•3 months ago
|
Comment 6•3 months ago
|
||
Comment on attachment 9432515 [details]
Bug 1926279 - Fix GetSizeOnDisk for local virtual folders using Maildir storage. r=mkmelin
[Triage Comment]
Approved for esr128
Comment 7•2 months ago
|
||
bugherder uplift |
Thunderbird 128.5.0esr:
https://hg.mozilla.org/releases/comm-esr128/rev/47a983abde88
Description
•