Bug 1926279 - Fix GetSizeOnDisk for local virtual folders using Maildir storage. r=mkmelin

Based on https://github.com/Betterbird/thunderbird-patches/blob/main/128/bugs/1924356-fix-total-count-display.patch

Differential Revision: https://phabricator.services.mozilla.com/D226473

--HG--
extra : moz-landing-system : lando